--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm run lint
 
   test:
-    name: Run Tests
+    name: 🧪 Run Tests
     runs-on: ubuntu-latest
     needs: lint
     steps:
@@ -47,7 +47,7 @@ jobs:
         run: npm run test
 
   deploy:
-    name: Deploy to Railway
+    name: 🚀 Deploy to Railway
     runs-on: ubuntu-latest
     needs: test
     steps:
@@ -70,7 +70,5 @@ jobs:
 
       - name: Deploy to Railway
         run: railway up --environment production --service social-network-api
-
-        
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
