--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   lint:
-    name: 🔍 Lint Code
+    name: Lint Code
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -28,7 +28,7 @@ jobs:
         run: npm run lint
 
   test:
-    name: 🧪 Run Tests
+    name: Run Tests
     runs-on: ubuntu-latest
     needs: lint
     steps:
@@ -47,7 +47,7 @@ jobs:
         run: npm run test
 
   deploy:
-    name: 🚀 Deploy to Railway
+    name: Deploy to Railway
     runs-on: ubuntu-latest
     needs: test
     steps:
