--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,34 +3,15 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
-  lint:
-    name: Lint Code
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Linter
-        run: npm run lint
-
   test:
     name: Run Tests
     runs-on: ubuntu-latest
-    needs: lint
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
